💄 style: fix invisible url on hover in projects

--- a/sass/parts/_misc.scss
+++ b/sass/parts/_misc.scss
@@ -49,7 +49,7 @@ h6:hover .zola-anchor {
   opacity: 1;
 }
 
-h1, h2, h3, h4, h5, h6 {
+.zola-anchor h1, h2, h3, h4, h5, h6 {
   a:hover {
     background-color: transparent;
   }
